# wasm-bevy-realtime

./: Cargo.toml  README.md
assets/: test_flights.csv
out.example/: get_flight.js  index.html
src/: earth.rs  lib.rs  main.rs  planes.rs
