[package]
name = "wasm-world-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features=["jpeg"] }
bevy_mod_paramap = "0.3.0"
serde = { version = "1.0.162", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.4"

[dependencies.js-sys]
version = "0.3.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
